# FSA

./: .gitignore  Makefile  README.md
python/: .gitignore  fa_ref.py  main.py  pyproject.toml
python/fsa/: __init__.py  config.py  engine.py  instructions.py  kernel.py  utils.py
python/msaga/: __init__.py  config.py  dtype.py  engine.py  instructions.py  kernel.py  mem.py  static_builder.py  tensor.py  utils.py
python/unit_test/: data.py  msaga_test.py  sa_test.py  signal_wrapper.py
src/main/resources/fsa/csrc/: AXI4WriteTracker.cc  FSASimTSI.cc  fsa_tsi.cc  fsa_tsi.h
src/main/resources/fsa/vsrc/: FSASimTSI.v
src/main/resources/msaga/csrc/: AXI4WriteTracker.cc  MSAGASimTSI.cc  msaga_tsi.cc  msaga_tsi.h
src/main/resources/msaga/vsrc/: AXI4WriteTracker.v  MSAGASimTSI.v
src/main/scala/fsa/: AXI4FSA.scala  Accumulator.scala  BankedSRAM.scala  Configs.scala  ControlGen.scala  ExecutionPlan.scala  FSA.scala  InputDelayer.scala  MatrixEngineController.scala
src/main/scala/fsa/arithmetic/: Arithmetic.scala  FPArithmeticImpl.scala
src/main/scala/fsa/dma/: DMA.scala  DMARequest.scala  LSQ.scala
src/main/scala/fsa/frontend/: Decoder.scala  Semaphores.scala
src/main/scala/fsa/isa/: DMAInstruction.scala  FenceInstruction.scala  ISA.scala  MatrixInstruction.scala
src/main/scala/msaga/: AXI4MSAGA.scala  Accumulator.scala  BankedSRAM.scala  Configs.scala  ControlGen.scala  ExecutionPlan.scala  ISA.scala  InputDelayer.scala  MSAGA.scala  MatrixEngineController.scala
src/test/scala/fsa/: ControlSignalTest.scala
src/test/scala/msaga/: ControlSignalTest.scala
(+39 files in other folders)
